# Pro-IntelliMouse-Control-Panel

./: .gitignore  .pylintrc  LICENSE  README.md  requirements.txt  setup.cfg
.github/workflows/: ci_cd.yml
macOS/kext/: README.md  install-kext.sh  uninstall-kext.sh
macOS/kext/tech.doggo.intellimouse.kext/Contents/: Info.plist
src/intellimouse/: __init__.py  classic_intellimouse.py  intellimouse.py  pro_intellimouse.py
src/intellimouse_ctl/: __init__.py  __main__.py
src/main/python/: intellimouse.py  main.py
tests/: test_classic_intellimouse.py  test_pro_intellimouse.py
