[metadata]
name = intellimouse-ctl
version = 1.0.0
author = Kim Visscher
author_email = kim@visscher.codes
description = A cross-platform command line tool and library for Microsofts IntelliMouse products.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/k-visscher/intellimouse-ctl
project_urls =
    Bug Tracker = https://github.com/k-visscher/intellimouse-ctl/issues
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires = hidapi>=0.9.0.post3

[options.entry_points]
console_scripts =
    intellimouse-ctl = intellimouse_ctl:main

[options.packages.find]
where = src